fixed spacing

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,13 +2,6 @@
   height: 100%;
   width: 100%;
 }
-.navEl {
-  /*position: fixed;*/
-  /*margin-left: 26%;*/
-}
-.navButtons {
-  display: block;
-}
 .artContent {
   margin-top: 10%;
 }
