--- a/styles/theme.css
+++ b/styles/theme.css
@@ -5,3 +5,6 @@ list-style-type: none;
 .button {
   border: 0px;
 }
+nav li {
+  display: inline;
+}
